--- a/main.css
+++ b/main.css
@@ -316,3 +316,10 @@ body{
   bottom: 0px;
   left: 43px;
 }
+@media only screen and (max-width: 600px) {
+  .home-img .navbar {
+    height: 150px;
+    
+}
+
+}
