--- a/main.css
+++ b/main.css
@@ -167,35 +167,29 @@ h1{
  }
 
 /* Timeline */
-.timeline,
-.timeline-horizontal {
-  list-style: none;
-  padding: 20px;
-  position: relative;
+.line{
+  text-align: center;
+  margin-top: 25px;
+  min-height: 400px;
 }
-.timeline:before {
-  top: 40px;
-  bottom: 0;
+.line img{
+  height: 90px;
+  color: #ffffff;
+  margin-top: 25px;
+}
+
+.line-heading{
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 600;
+  text-align: center;
+}
+.line-description{
   position: absolute;
-  content: " ";
-  width: 3px;
-  background-color: #eeeeee;
-  left: 50%;
-  margin-left: -1.5px;
+  top: 250px;
 }
-.timeline .timeline-item {
-  margin-bottom: 20px;
-  position: relative;
-}
-.timeline .timeline-item:before,
-.timeline .timeline-item:after {
-  content: "";
-  display: table;
-}
-.timeline .timeline-item:after {
-  clear: both;
-}
-.timeline .timeline-item .timeline-badge {
+
+.line-badge {
   color: #fff;
   width: 150px;
   height: 150px;
@@ -203,8 +197,8 @@ h1{
   font-size: 22px;
   text-align: center;
   position: absolute;
-  top: 18px;
-  left: 50%;
+  top: 80px;
+  left: 30%;
   margin-left: -25px;
   background-color: #7c7c7c;
   border: 3px solid #ffffff;
@@ -214,135 +208,22 @@ h1{
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 50%;
 }
-.timeline .timeline-item .timeline-badge i,
-.timeline .timeline-item .timeline-badge .fa,
-.timeline .timeline-item .timeline-badge .glyphicon {
-  top: 2px;
-  left: 0px;
-}
-.timeline .timeline-item .timeline-badge.primary {
+.badge-1 {
   background-color: #e19323;
 }
-.timeline .timeline-item .timeline-badge.info {
+.badge-2 {
   background-color: #de8023;
 }
-.timeline .timeline-item .timeline-badge.success {
+.badge-3 {
   background-color: #da7e21;
 }
-.timeline .timeline-item .timeline-badge.warning {
+.badge-4 {
   background-color: #d76b20;
 }
-.timeline .timeline-item .timeline-badge.danger {
+.badge-5 {
   background-color: #d45719;
 }
-.timeline .timeline-item .timeline-panel {
-  position: relative;
-  width: 46%;
-  float: left;
-  right: 16px;
-  padding: 20px;
-}
-.timeline .timeline-item .timeline-panel:before {
-  position: absolute;
-  top: 26px;
-  right: -16px;
-  display: inline-block;
-  border-top: 16px solid transparent;
-  border-left: 16px solid #c0c0c0;
-  border-right: 0 solid #c0c0c0;
-  border-bottom: 16px solid transparent;
-  content: " ";
-}
-.timeline .timeline-item .timeline-panel .timeline-title {
-  margin-top: 0;
-  color: inherit;
-}
-.timeline .timeline-item .timeline-panel .timeline-body > p,
-.timeline .timeline-item .timeline-panel .timeline-body > ul {
-  margin-bottom: 0;
-}
-.timeline .timeline-item .timeline-panel .timeline-body > p + p {
-  margin-top: 5px;
-}
-.timeline .timeline-item:last-child:nth-child(even) {
-  float: right;
-}
-.timeline .timeline-item:nth-child(even) .timeline-panel {
-  float: right;
-  left: 16px;
-}
-.timeline .timeline-item:nth-child(even) .timeline-panel:before {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -14px;
-  right: auto;
-}
-.timeline-horizontal {
-  list-style: none;
-  position: relative;
-  padding: 20px 0px 20px 0px;
-  display: inline-block;
-}
-.timeline-horizontal:before {
-  height: 35px;
-  top: auto;
-  bottom: 26px;
-  left: 0px;
-  right: 0;
-  width: 100%;
-  margin-bottom: 20px;
-}
-.timeline-horizontal .timeline-item {
-  display: table-cell;
-  height: 280px;
-  width: 20%;
-  min-width: 320px;
-  float: none !important;
-  padding-left: 0px;
-  padding-right: 20px;
-  margin: 0 auto;
-  vertical-align: bottom;
-}
-.timeline-horizontal .timeline-item .timeline-panel {
-  top: auto;
-  bottom: 64px;
-  display: inline-block;
-  float: none !important;
-  left: 0 !important;
-  right: 0 !important;
-  width: 100%;
-  margin-bottom: 20px;
-}
-.timeline-horizontal .timeline-item .timeline-panel:before {
-  top: auto;
-  bottom: -16px;
-  left: 28px !important;
-  right: auto;
-  border-right: 16px solid transparent !important;
-  border-top: 16px solid #c0c0c0 !important;
-  border-bottom: 0 solid #c0c0c0 !important;
-  border-left: 16px solid transparent !important;
-}
-.timeline-horizontal .timeline-item:before,
-.timeline-horizontal .timeline-item:after {
-  display: none;
-}
-.timeline-horizontal .timeline-item .timeline-badge {
-  top: auto;
-  bottom: -33px;
-  left: 100px;
-}
-.timeline img{
-  height: 90px;
-  color: #ffffff;
-  margin-top: 25px;
-}
-.timeline-heading{
-  text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 600;
-  text-align: center;
-}
+
 
 @media only screen and (max-width: 600px) {
   .home-img .navbar {
