--- a/main.css
+++ b/main.css
@@ -1,8 +1,6 @@
-#cd6e37: #cd6e37;
-#555: #555;
-#E91E63: #E91E63;
-$width: 400px;
-cubic-bezier(.64,.09,.08,1): cubic-bezier(.64,.09,.08,1);
+*{
+  overflow-x: hidden;
+}
 body{
   font-family:  'Josefin Sans', sans-serif;
   font-size: 15px;
@@ -37,7 +35,6 @@ h1{
 .navbar-default .navbar-nav>li>a {
     color: #000000;
 }
-
 .home-img{
   background-image: url("img/home-bk.jpg");
   background-position: center; /* Center the image */
@@ -45,18 +42,18 @@ h1{
   background-size: cover; /* Resize the background image to cover the entire container */
   min-height: 325px;
 }
-.home-img .nav{
+.nav-sec .nav{
   margin-top: 0px;
 }
-.home-img .navbar-nav{
+.nav-sec .navbar-nav{
   display: inline;
 }
-.home-img .navbar{
+.nav-sec{
   background-color: rgba(223, 223, 223, 0.8);
   height: 40px;
   margin-top: 15px;
 }
-.home-img img{
+.nav-sec-img{
   width: 25px;
   margin-right: 15px;
 }
@@ -72,6 +69,7 @@ h1{
 .home-img button{
   float: right;
   background-color: #cd6e37;
+  border: solid 2px;
   border-color: #ffffff;
   margin-top: 40px;
   margin-right: 250px;
@@ -227,122 +225,18 @@ h1{
 .badge-5 {
   background-color: #d45719;
 }
-<<<<<<< HEAD
-=======
-.timeline .timeline-item .timeline-panel {
-  position: relative;
-  width: 46%;
-  float: left;
-  right: 16px;
-  padding: 20px;
+
+.home-boxes .home-box a:hover{
+  text-decoration: none;
+  color: #000000;
 }
-.timeline .timeline-item .timeline-panel:before {
-  position: absolute;
-  top: 26px;
-  right: -16px;
-  display: inline-block;
-  border-top: 16px solid transparent;
-  border-left: 16px solid #c0c0c0;
-  border-right: 0 solid #c0c0c0;
-  border-bottom: 16px solid transparent;
-  content: " ";
-}
-.timeline .timeline-item .timeline-panel .timeline-title {
-  margin-top: 0;
-  color: inherit;
-}
-.timeline .timeline-item .timeline-panel .timeline-body > p,
-.timeline .timeline-item .timeline-panel .timeline-body > ul {
-  margin-bottom: 0;
-}
-.timeline .timeline-item .timeline-panel .timeline-body > p + p {
-  margin-top: 5px;
-}
-.timeline .timeline-item:last-child:nth-child(even) {
-  float: right;
-}
-.timeline .timeline-item:nth-child(even) .timeline-panel {
-  float: right;
-  left: 16px;
-}
-.timeline .timeline-item:nth-child(even) .timeline-panel:before {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -14px;
-  right: auto;
-}
-.timeline-horizontal {
-  list-style: none;
-  position: relative;
-  padding: 20px 0px 20px 0px;
-  display: inline-block;
-}
-.timeline-horizontal:before {
-  height: 35px;
-  top: auto;
-  bottom: 26px;
-  left: 0px;
-  right: 0;
-  width: 100%;
-  margin-bottom: 20px;
-}
-.timeline-horizontal .timeline-item {
-  display: table-cell;
-  height: 280px;
-  width: 20%;
-  min-width: 320px;
-  float: none !important;
-  padding-left: 0px;
-  padding-right: 20px;
-  margin: 0 auto;
-  vertical-align: bottom;
-}
-.timeline-horizontal .timeline-item .timeline-panel {
-  top: auto;
-  bottom: 64px;
-  display: inline-block;
-  float: none !important;
-  left: 0 !important;
-  right: 0 !important;
-  width: 100%;
-  margin-bottom: 20px;
-}
-.timeline-horizontal .timeline-item .timeline-panel:before {
-  top: auto;
-  bottom: -16px;
-  left: 28px !important;
-  right: auto;
-  border-right: 16px solid transparent !important;
-  border-top: 16px solid #c0c0c0 !important;
-  border-bottom: 0 solid #c0c0c0 !important;
-  border-left: 16px solid transparent !important;
-}
-.timeline-horizontal .timeline-item:before,
-.timeline-horizontal .timeline-item:after {
-  display: none;
-}
-.timeline-horizontal .timeline-item .timeline-badge {
-  top: auto;
-  bottom: -33px;
-  left: 100px;
-}
-.timeline img{
-  height: 90px;
-  color: #ffffff;
-  margin-top: 25px;
-}
-.timeline-heading{
-  text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 600;
-  text-align: center;
-}
-form {
-  font-family: 'roboto', sans-serif;
+
+.precalificacioncreditica form {
   width: $width + 60px;
   padding: 0 0 40px;
   border-radius: 3px;
-  color: #555;
+  color: #000000;
+  margin-top: 25px;
 }
 
 input::-webkit-input-placeholder,
@@ -365,21 +259,6 @@ input,select {
   transition: background 0.3s cubic-bezier(.64,.09,.08,1);
   resize: none;
   overflow: hidden;
-  &:focus::-webkit-input-placeholder {
-    color: #cd6e37;
-  }
-  &:focus,
-  &:valid {
-    box-shadow: none;
-    outline: none;
-    background-position: 0 0;
-    &::-webkit-input-placeholder {
-      font-size: 0.8em;
-      transform: translateY(-20px);
-      visibility: visible !important;
-      opacity: 1;
-    }
-  }
 }
 textarea{
   font: inherit;
@@ -393,85 +272,23 @@ textarea{
   transition: background 0.3s cubic-bezier(.64,.09,.08,1);
   resize: none;
   overflow: hidden;
-  &:focus::-webkit-input-placeholder {
-    color: #cd6e37;
-  }
-  &:focus,
-  &:valid {
-    box-shadow: none;
-    outline: none;
-    background-position: 0 0;
-    &::-webkit-input-placeholder {
-      font-size: 0.8em;
-      transform: translateY(-20px);
-      visibility: visible !important;
-      opacity: 1;
-    }
-  }
 }
+
 input[type="email"] {
   background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, #cd6e37 4%);
   background-position: -400px 0;
   background-repeat: no-repeat;
   transition: border-bottom 0.3s ease, background 0.3s ease;
-  &~span.validation-text {
-    position: absolute;
-    visibility: hidden;
-    font-family: 'roboto', sans-serif;
-    font-size: 0.6em;
-    width: $width;
-    margin-left: 25px;
-    margin-top:-5px;
-    color: white;
-    transition: color 0.3s ease-in-out;
-  }
-  &:not([value=""]) {
-    &::-webkit-input-placeholder {
-      font-size: 0.8em;
-      transform: translateY(-20px);
-      visibility: visible !important;
-      opacity: 1;
-    }
-    &:focus::-webkit-input-placeholder {
-      color: #cd6e37;
-    }
-    &:focus:not(:valid)::-webkit-input-placeholder {
-      color: #E91E63;
-    }
-  }
-  &:focus {
-    background-position: 0 0;
-    &:not(:valid):not([value=""]) {
-      border-bottom: solid 1px #E91E63;
-      background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, #E91E63 4%);
-    }
-  }
-  &:not(:focus):not(:valid):not([value=""]) {
-    &::-webkit-input-placeholder {
-      color: #E91E63;
-    }
-    border-bottom: solid 1px #E91E63;
-    background-position: 0 0 ;
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, #E91E63 4%);
-    &~span.validation-text {
-      visibility: visible;
-      color: #E91E63;
-    }
-  }
 }
 
 .flex {
   display: flex;
   align-items: stretch;
-  textarea {
-    line-height: 120%;
-  }
 }
 
 button {
-  font-family: 'roboto', sans-serif;
   transition: transform 0.2s cubic-bezier(.64,.09,.08,1),
-     box-shadow 0.2s cubic-bezier(.64,.09,.08,1);
+  box-shadow 0.2s cubic-bezier(.64,.09,.08,1);
   border: none;
   background: #cd6e37;
   cursor: pointer;
@@ -481,26 +298,181 @@ button {
   color: white;
   margin: 30px 0 0 25px;
   box-shadow: 0 3px 6px 0 rgba(0,0,0,0.2);
-  &:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 5px 6px 0 rgba(0,0,0,0.2);
-  }
 }
 
-/*a {
-  display: inline-block;
-  width: 100%;
-  margin-top: 50px;
+.subtitle{
+  background-color: #cd6e37;
   text-align: center;
-  font-family: 'roboto', sans-serif;
-  text-decoration: none;
+}
+.subtitle h2{
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+.precalificacioncreditica .nav-sec{
+  margin-top: 0;
+}
+.lineadefinanciamiento .nav-sec{
+  margin-top: 0;
+}
+.lineadefinanciamiento .lf-bg{
+  background-color: #f3f3f3;
+  padding-top: 25px;
+}
+.lineadefinanciamiento .lf-boxes, .bg-grey{
+  background-color: #f3f3f3;
+}
+.lineadefinanciamiento .orange{
   color: #cd6e37;
-  i {
-    margin-right: 5px;
-  }
-}*/
->>>>>>> 7738942a540e3696424b18277afb259154ab4f3a
+}
 
+.sectorTexto{
+  width: 9%;
+  float: left;
+  position: relative;
+  top: 0;
+  left: 0;
+  margin: 50px .5%;
+  transition: all .3s ease;
+  border-radius: 5px;
+  text-align: center;
+  background: #fff;
+  min-height: 250px;
+  padding: 10px .5% 0;
+}
+
+.sectorTexto a{
+  transition: all .3s ease;
+}
+
+.sectorTexto p1{
+  width: 100%;
+  float: left;
+  color: #cd6e37;
+  font-size: 20px;
+  margin: 0 0 5px;
+  font-weight: 600;
+  transition: all .3s ease;
+}
+.sectorTexto p2{
+  width: 100%;
+  float: left;
+  color: #666;
+  font-size: 16px;
+  margin: 0;
+  font-weight: 600;
+  transition: all .3s ease;
+  min-height: 40px;
+}
+.sectorTexto p{
+  width: 100%;
+  float: left;
+  color: #eee;
+  font-size: 12px;
+  margin: 0;
+  font-weight: 300;
+  opacity: 0;
+  transition: all .3s ease;
+  min-height: 60px;
+}
+.sectorTexto img{
+  width: 70%;
+  display: table;
+  margin: 20px auto 0;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  opacity: .5;
+  transition: all .3s ease;
+}
+.sectorTexto:hover {
+  transition: all .3s ease;
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+  background: #222;
+  width: 9.5%;
+  padding: 10px 1% 0;
+  float: left;
+  position: relative;
+  top: 0;
+  left: 0;
+  margin: 10px 0 0 -1.5%;
+  min-height: 300px;
+}
+.sectorTexto:hover p {
+  font-size: 16px;
+  margin: 5px 0 10px;
+  opacity: 1;
+  transition: all .3s ease;
+}
+.sectorTexto:hover img {
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
+  opacity: 1;
+  transition: all .3s ease;
+  width: 80%;
+  margin: 5px auto 0;
+}
+.nuestrosproductos{
+  background-color: #f3f3f3;
+}
+.goback{
+  top: -25px;
+}
+.np-boxes{
+  padding-right: 60px;
+  padding-left: 60px;
+  padding-bottom: 25px;
+}
+.np-boxes h3{
+  font-size: 27px;
+  font-weight: 600;
+}
+.np-boxes .prod-1 h3{
+  color: #d36e37;
+}
+.np-boxes .prod-2{
+  color: #ffffff;
+}
+.ventajas .subtitle, .nuestrosproductos .subtitle{
+  text-align: left;
+  padding-left: 40px;
+  background-color: rgba(211, 110, 55, 0.85);
+  position: relative;
+  bottom: 60px;
+}
+.prod-1{
+  background-color:#ffffff;
+}
+.prod-2{
+  background-color: #cd6e37;
+}
+.prod-1, .prod-2{
+  min-height: 330px;
+}
+.nuestrosproductos .sub{
+  font-size: 17px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+.ventajas, .bg-white{
+  background-color: #ffffff;
+}
+.ventajas-box{
+  background-color: #efeeed;
+  min-height: 230px;
+}
+
+@media only screen and (max-width: 1400px){
+.sectorTexto, .sectorTexto:hover {
+    width: 18%;
+    margin: 30px .5% 0;
+    height: 250px;
+    min-height: unset;
+    padding: 10px .5% 0;
+  }
+}
 
 @media only screen and (max-width: 600px) {
   .home-img .navbar {
