--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
-*{
+/* *{
   overflow-x: hidden;
-}
+} */
 body{
   font-family:  'Josefin Sans', sans-serif;
   font-size: 15px;
@@ -36,11 +36,12 @@ h1{
     color: #000000;
 }
 .home-img{
-  background-image: url("img/home-bk.jpg");
+  background-image: url("img/homeidea.jpg");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
   min-height: 325px;
+  margin-top: 75px;
 }
 .nav-sec .nav{
   margin-top: 0px;
@@ -64,8 +65,8 @@ h1{
   font-weight: 700;
   line-height: 50px;
   text-align: center;
+  color: #fff;
 }
-
 .home-img button{
   float: right;
   background-color: #cd6e37;
@@ -81,7 +82,7 @@ h1{
   letter-spacing: 1px;
 }
 .home-boxes{
-  margin-top: 50px;
+  margin-top: 15px;
 }
 .home-box{
   padding-left: 50px;
@@ -173,6 +174,8 @@ h1{
   text-align: center;
   margin-top: 25px;
   min-height: 400px;
+  margin-bottom: 25px;
+
 }
 .line img{
   height: 90px;
@@ -187,8 +190,7 @@ h1{
   text-align: center;
 }
 .line-description{
-  position: absolute;
-  top: 250px;
+  MARGIN-TOP: 205PX;
 }
 
 .line-badge {
@@ -200,7 +202,7 @@ h1{
   text-align: center;
   position: absolute;
   top: 80px;
-  left: 30%;
+  left: 34%;
   margin-left: -25px;
   background-color: #7c7c7c;
   border: 3px solid #ffffff;
@@ -225,14 +227,19 @@ h1{
 .badge-5 {
   background-color: #d45719;
 }
-
+.lineaT{
+  background-color: #dfdfdf;
+    position: relative;
+    height: 40px;
+    top: 182px;
+}
 .home-boxes .home-box a:hover{
   text-decoration: none;
   color: #000000;
 }
 
 .precalificacioncreditica form {
-  width: $width + 60px;
+  width: 100%;
   padding: 0 0 40px;
   border-radius: 3px;
   color: #000000;
@@ -249,7 +256,7 @@ textarea::-webkit-input-placeholder {
 
 input,select {
   font: inherit;
-  font-size: 0.8em;
+  font-size: 1em;
   display: block;
   border: none;
   padding: 10px 0 10px;
@@ -262,12 +269,12 @@ input,select {
 }
 textarea{
   font: inherit;
-  font-size: 0.8em;
+  font-size: 1em;
   display: block;
   border: none;
-  padding: 10px 0 10px;
-  border: solid .1px #cd6e37;
-  background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, #cd6e37 4%);
+  padding: 10px;
+  border: solid 2px #cd6e37;
+  background: rgba(255,255,255,0);
   background-repeat: no-repeat;
   transition: background 0.3s cubic-bezier(.64,.09,.08,1);
   resize: none;
@@ -276,7 +283,7 @@ textarea{
 
 input[type="email"] {
   background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, #cd6e37 4%);
-  background-position: -400px 0;
+  /* background-position: -400px 0; */
   background-repeat: no-repeat;
   transition: border-bottom 0.3s ease, background 0.3s ease;
 }
@@ -289,14 +296,12 @@ input[type="email"] {
 button {
   transition: transform 0.2s cubic-bezier(.64,.09,.08,1),
   box-shadow 0.2s cubic-bezier(.64,.09,.08,1);
-  border: none;
+  border: 2px solid #ffffff;
   background: #cd6e37;
   cursor: pointer;
-  border-radius: 3px;
-  padding: 6px;
-  width: $width;
+  padding: 6px 10px;
   color: white;
-  margin: 30px 0 0 25px;
+  margin: 15px 0 0 0;
   box-shadow: 0 3px 6px 0 rgba(0,0,0,0.2);
 }
 
@@ -309,11 +314,8 @@ button {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-.precalificacioncreditica .nav-sec{
-  margin-top: 0;
-}
-.lineadefinanciamiento .nav-sec{
-  margin-top: 0;
+.precalificacioncreditica .nav-sec, .lineadefinanciamiento .nav-sec, .sospyme .nav-sec {
+    margin-top: 80px;
 }
 .lineadefinanciamiento .lf-bg{
   background-color: #f3f3f3;
@@ -322,7 +324,7 @@ button {
 .lineadefinanciamiento .lf-boxes, .bg-grey{
   background-color: #f3f3f3;
 }
-.lineadefinanciamiento .orange{
+.orange{
   color: #cd6e37;
 }
 
@@ -435,7 +437,7 @@ button {
 .np-boxes .prod-2{
   color: #ffffff;
 }
-.ventajas .subtitle, .nuestrosproductos .subtitle{
+.ventajas .subtitle, .nuestrosproductos .subtitle, .calculadora .subtitle, .sgr .subtitle, .nosotros .subtitle{
   text-align: left;
   padding-left: 40px;
   background-color: rgba(211, 110, 55, 0.85);
@@ -449,7 +451,7 @@ button {
   background-color: #cd6e37;
 }
 .prod-1, .prod-2{
-  min-height: 330px;
+  min-height: 340px;
 }
 .nuestrosproductos .sub{
   font-size: 17px;
@@ -459,11 +461,242 @@ button {
 .ventajas, .bg-white{
   background-color: #ffffff;
 }
+.ventajas .np-boxes ul{
+  list-style: none;
+  font-size: 18px;
+}
+.ventajas .np-boxes ul li{
+  line-height: 30px
+}
+.ventajas .np-boxes ul li::before {
+  content: "\2022";
+  color: #cd6e37;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
 .ventajas-box{
   background-color: #efeeed;
   min-height: 230px;
+  padding-left: 20px;
+}
+.ventajas-box p{
+  font-size: 18px;
+}
+.ventajas-box h3{
+  color: #cd6e37;
+  font-size: 20px;
+  padding-top: 20px;
+}
+.calculadora .orange{
+  font-weight: 600;
+  font-size: 20px;
+}
+.calculadora p {
+  font-size: 20px;
+}
+.calculadora-box{
+  color: #ffffff;
+}
+.calculadora-box input{
+  display: inline-block;
+}
+.calculadora-box input,.calculadora-box  select {
+  border-bottom:solid 3px #ffffff;
+  width: 100%;
+  margin-bottom: 25px;
+}
+.calculadora-box h2 {
+  font-size: 30px;
+  font-weight: 600;
+  margin-top: 10px
+}
+.calculadora button{
+  float: right;
+  margin-top: 0px;
+}
+.calc-1 .col-md-12{
+  padding-left: 5px;
+  padding-right: 30px;
+}
+.calc-2 .col-md-12{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.calculadora-box input{
+  font-size: 20px;
+  font-weight: 600;
+  }
+.calculadora-box label{
+  font-size: 20px;
+}
+.calc-1{
+  background-color: #cd6e37;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+.calc-2{
+  background-color: rgba(229,229,229,0.4);
+  color: #cd6e37;
+}
+.calc-2 p{
+  font-size: 20px;
+  padding-top: 20px;
+  border-bottom: solid 3px #cd6e37;
+  padding-left: 10px;
+  padding-top: 30px;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+.calc-2 .disclosure{
+  font-size: 17px;
+  border-bottom: 0px;
+  padding-left: 20px;
+}
+.calc-2 .valorneto{
+  background-color: #cd6e37;
+  color: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+}
+.calc-1, .calc-2{
+  min-height: 285px;
+}
+.bg-grey h2{
+  color: #cd6e37;
+  text-align: center;
+}
+.vermas a{
+  color: #ffffff;
+}
+.vermas a:focus, .vermas a:hover{
+  text-decoration: none;
+  color: #ffffff;
+}
+.home-img button:hover{
+  background-color: transparent;
 }
 
+.contact .contactosubt {
+  display: none;
+}
+.contact .contact-form{
+  margin-top: 35px;
+}
+.contact select, .precalificacioncreditica select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 10px 0 10px;
+}
+label {
+  font-weight: 600;
+  margin-bottom: 0px;
+}
+textarea:focus, input:focus, select:focus{
+    outline: none;
+}
+.contact .home-contact-row{
+  margin-top: 35px;
+}
+.contact-nopad{
+  padding: 0;
+}
+.precalificacioncreditica .home-boxes{
+  margin-top: 0px;
+}
+
+.calculadora-box ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #ffffff;
+  opacity: 1; /* Firefox */
+}
+
+.calculadora-box :-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #ffffff;
+}
+
+.calculadora-box ::-ms-input-placeholder { /* Microsoft Edge */
+  color: #ffffff;
+}
+.nosotros .home-img{
+  background-image: url("img/buildings.jpg");
+}
+.building-grad{
+  background-image: linear-gradient(to bottom, rgba(237, 166, 37, 0.52), rgba(227, 152, 59, 0.73), rgba(223, 128, 30, 0.52)),
+url('img/skyscrapers.jpg');
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+.nosotros .line-badge img{
+  height: 90px;
+  margin-top: 20px;
+}
+.nos-logo{
+  height: 80px !important;
+  margin-top: 42px !important;
+}
+.building-grad {
+  padding-top: 30px;
+}
+.building-grad .line-badge{
+  background-color: #ffffff;
+  width: 270px;
+  height: 250px;
+  left: 36%;
+}
+.nosotros .line-badge{
+  position: relative;
+  top: 0;
+  left: 37%;
+}
+.np-boxes .line-badge{
+  left: 35% !important;
+}
+.np-boxes {
+  font-size: 18px;
+}
+.nosotros .badge-1{
+  background-color: #d75d12;
+}
+.nos-badges{
+  text-align: center;
+  padding: 0 230px;
+}
+.nos-sub{
+  font-weight: 600;
+  text-align: center !important;
+  margin-top: 10px;
+}
+.nos-box{
+  background-color: #ffffff;
+  border-radius: 20px;
+  padding: 30px;
+  margin: 0 145px;
+  position: relative;
+  top: -128px;
+  z-index: 1000;
+  min-height: 400px;
+  text-align: justify;
+}
+.nos-gradient{
+  margin: 0;
+  background: linear-gradient(to right, rgba(237, 166, 33), rgba(227, 152, 59), rgba(223, 128, 30));
+  padding: 35px 60px;
+  color: #ffffff;
+  font-size: 20px;
+  text-align: center;
+}
+.nos-inicio{
+  padding: 10px 60px;
+  text-align: center;
+  font-size: 20px;
+}
+.rosental{
+  height: 100px !important;
+  margin-top: 31px !important;
+}
 @media only screen and (max-width: 1400px){
 .sectorTexto, .sectorTexto:hover {
     width: 18%;
@@ -477,6 +710,5 @@ button {
 @media only screen and (max-width: 600px) {
   .home-img .navbar {
     height: 150px;
-}
-
+  }
 }
