--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ body{
 }
 h1{
   color: #000000;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 /* Navbar */
 .navbar{
@@ -158,7 +159,7 @@ h1{
 .footer .contact-icons{
   width: 20px;
 }
-.datafiscal{
+.twitter img{
   float: right;
   width: 120px;
   padding-top: 15px;
@@ -321,7 +322,7 @@ button {
   background-color: #f3f3f3;
   padding-top: 25px;
 }
-.lineadefinanciamiento .lf-boxes, .bg-grey{
+.lineadefinanciamiento .lf-boxes, .bg-grey, .sospyme .bg-grey{
   background-color: #f3f3f3;
 }
 .orange{
@@ -365,6 +366,7 @@ button {
   font-weight: 600;
   transition: all .3s ease;
   min-height: 40px;
+  text-transform: uppercase;
 }
 .sectorTexto p{
   width: 100%;
@@ -697,13 +699,82 @@ url('img/skyscrapers.jpg');
   height: 100px !important;
   margin-top: 31px !important;
 }
+.items-6 {
+    padding-bottom: 80px;
+    padding-top: 30px;
+}
+.items-6 .sectorBanner a {
+    width: 100%;
+    height: 100%;
+    float: left;
+        color: #666666;
+}
+.items-6 .sectorBanner:hover a {
+    color: #ffffff;
+    text-decoration: none;
+}
+.items-6 .sectorBanner:hover {
+    background-color: rgba(20,20,20,.8);
+    width: 20%;
+    margin: 0 0 -200px;
+    transition: all .3s ease;
+}
+
+.items-6 .sectorBanner img {
+    width: 55%;
+    display: table;
+    margin: auto;
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
+    opacity: .7;
+    transition: all .3s ease;
+}
+.items-6 .sectorBanner:hover img {
+    width: 65%;
+    display: table;
+    margin: auto;
+    -webkit-filter: invert(0);
+    filter: invert(0);
+    opacity: 1;
+    transition: all .3s ease;
+}
+.items-6 .sectorBanner {
+    width: 14%;
+    margin: 50px 3% 0;
+    float: left;
+    text-align: center;
+    background-color: rgba(255,255,255,.8);
+    border-radius: 50%;
+    padding: 30px 0;
+    transition: all .3s ease;
+}
+
+
+
+.sgr-img{
+  text-align: center;
+  margin-bottom: 45px;
+    margin-top: 10px;
+}
+.sgr-img img {
+  width: 80%;
+}
 @media only screen and (max-width: 1400px){
-.sectorTexto, .sectorTexto:hover {
-    width: 18%;
-    margin: 30px .5% 0;
-    height: 250px;
-    min-height: unset;
-    padding: 10px .5% 0;
+.items-6 .sectorBanner {
+    padding: 20px 0;
+  }
+}
+@media only screen and (max-width: 1400px){
+.items-6 .sectorBanner img {
+    width: 40%;
+  }
+}
+
+/* RESPONSIVE */
+
+@media only screen and (max-width: 1024px) {
+  .home-img .navbar {
+    height: 150px;
   }
 }
 
