--- a/main.css
+++ b/main.css
@@ -776,10 +776,31 @@ url('img/skyscrapers.jpg');
 }
 
 /* RESPONSIVE */
+@media only screen and (max-width:1281px) { /* hi-res laptops and desktops */
 
+}
 @media only screen and (max-width: 1024px) {
-  .home-img .navbar {
-    height: 150px;
+  .nav-sec .nav-link{
+    padding: 10px 0px;
+  }
+  .home-img p {
+    margin-top: 40px;
+    font-size: 28px;
+  }
+  .home-img button {
+    margin-top: 10px;
+    margin-right: 50px;
+  }
+  .home-img {
+    min-height: 285px;
+  }
+  .home-box{
+    padding-left: 7px;
+    padding-right: 7px;
+  }
+  .home-box-1, .home-box-2, .home-box-3{
+    min-height: 230px;
+    max-height: 230px;
   }
 }
 
@@ -788,3 +809,11 @@ url('img/skyscrapers.jpg');
     height: 150px;
   }
 }
+
+
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */}
